[gd_scene load_steps=10 format=3 uid="uid://berad04b8106r"]

[ext_resource type="FontFile" uid="uid://cjf7i0tj0q4gs" path="res://ressources/Font/Kenney Future Narrow.ttf" id="1_8qfex"]
[ext_resource type="Script" path="res://main.gd" id="1_j0auo"]
[ext_resource type="Texture2D" uid="uid://c2ckrql7l0yor" path="res://ressources/PNG/Green/Double/button_rectangle_depth_gloss.png" id="1_wkv35"]
[ext_resource type="Texture2D" uid="uid://cjl16bjvakra7" path="res://ressources/PNG/Green/Default/button_rectangle_depth_gloss.png" id="2_a4mml"]
[ext_resource type="Texture2D" uid="uid://dm6krl4avp6si" path="res://ressources/PNG/Green/Default/button_rectangle_depth_border.png" id="3_028hv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jwxy3"]
texture = ExtResource("1_wkv35")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7cgsn"]
texture = ExtResource("2_a4mml")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cvdds"]
texture = ExtResource("3_028hv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4gy7o"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j0auo")

[node name="IncButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -50.5
offset_right = 144.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_8qfex")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_jwxy3")
theme_override_styles/hover = SubResource("StyleBoxTexture_7cgsn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_cvdds")
theme_override_styles/focus = SubResource("StyleBoxTexture_4gy7o")
text = "INCREASE"

[node name="scoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -85.5
offset_right = 85.5
offset_bottom = 35.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_8qfex")
theme_override_font_sizes/font_size = 30
text = "Score: 0"

[node name="TimeLeft" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -118.5
offset_top = -35.0
offset_right = 118.5
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_8qfex")
theme_override_font_sizes/font_size = 30
text = "TimeLeft: 5"

[node name="TimerTimeLeft" type="Timer" parent="."]
process_callback = 0
autostart = true

[connection signal="pressed" from="IncButton" to="." method="_on_inc_button_pressed"]
[connection signal="timeout" from="TimerTimeLeft" to="." method="_on_timer_time_left_timeout"]
